--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>
 
             <p> “Nurturing innovation through a collaborative</p>
-            <p>community of entrepreneurs.”</p>
+            <p>  community of entrepreneurs.”</p>
         </h2>
     </div>
 
@@ -39,9 +39,9 @@
 
     </div>
 
-    <!-- <div class="element"> 
+    <div class="element"> 
 
-    </div> -->
+    </div>
 </body>
 
 </html>
