responsive for laptops

--- a/index.html
+++ b/index.html
@@ -7,62 +7,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 
 <body>
     <nav>
         <div class="ai-kbi">AIKBI</div>
-        <a href="#home"><div class="place poppins-medium-black-30px">
-            Home
-        </div></a>
-        <a href="#explore"><div class="explore poppins-medium-black-30px">
-            Explore
-        </div></a>
-        <a href=""><div class="news-events poppins-medium-black-30px">
-            News &amp; Events
-        </div></a>
-        <a href="https://docs.google.com/forms/d/1QCsfrtG7gbU7haBA8HL6Yar7AUz9fxCA_jK6tJpiWqs/edit" target="_blank"><button class="button-1 border-3px-picton-blue">
-            <p>Get Incubated</p>
-        </button></a>
+        <a href="#home">
+            <div class="place poppins-medium-black-30px">
+                Home
+            </div>
+        </a>
+        <a href="#explore">
+            <div class="explore poppins-medium-black-30px">
+                Explore
+            </div>
+        </a>
+        <a href="">
+            <div class="news-events poppins-medium-black-30px">
+                News &amp; Events
+            </div>
+        </a>
+        <a href="https://docs.google.com/forms/d/1QCsfrtG7gbU7haBA8HL6Yar7AUz9fxCA_jK6tJpiWqs/edit"
+            target="_blank"><button class="button-1 border-3px-picton-blue">
+                Get Incubated
+            </button></a>
     </nav>
-    <div class="rectangle-2" id="home">
-        <img src="./Images/group-7@2x.svg" alt="" class="group-1">
-        <div class="start-develope-grow bp1-animate-enter2">
-            Start. <br>
-            Develop. <br>
-            Grow. <br>
-        </div>
-        <img src="./Images/group@2x.svg" alt="" class="group">
-        <img src="./Images/elements-1@1x (1).png" alt="" class="element-1 bp1-animate-enter1" />
-        <div class="empowering-incubator">
-            Empowering incubators to launch the business of tomorrow.
-        </div>
-        <img src="./Images/photo-1-1@1x (1).png" alt="" class="photo-1-1 bp1-animate-enter">
-    </div>
-    <img src="./Images/photo-2-1@1x.png" alt="" class="photo-2-1" id="explore">
-    <div class="whether-youre-start">
-        Whether you're starting out, or scaling to meet demand, connect with the right people, products and best
-        practices to help your startup grow.
-    </div>
-    <img src="./Images/elements-5-2@2x.png" alt="" class="group-5-2">
-    <a href="https://docs.google.com/forms/d/1QCsfrtG7gbU7haBA8HL6Yar7AUz9fxCA_jK6tJpiWqs/edit" target="_blank"><button class="button-2 border-3px-picton-blue">
-       <p>Apply For Incubation</p>
-    </button></a>
-    <img src="./Images/photo-3-2@1x.png" alt="" class="photo-3-2">
-    <img src="./Images/group-2@2x.svg" alt="" class="group-3">
-    <div class="rectangle-6">
-        <img src="./Images/group-1-2@2x.svg" alt="" class="group-1-1">
-        <div class="success-is-not-final">
-            <blockquote>
-                "Success is not final; failure is not fatal: it is the courage to continue that counts." 
-            </blockquote>
-        </div>
-        <div class="name">
-            Winston Churchill
-        </div>
-    </div>
-    
 
+    <div class="cotainer-fluid">
+
+        <div class="rectangle-2" id="home">
+            <img src="./Images/group-7@2x.svg" alt="" class="group-1">
+            <div class="start-develope-grow bp1-animate-enter2">
+                Start. <br>
+                Develop. <br>
+                Grow. <br>
+            </div>
+            <img src="./Images/group@2x.svg" alt="" class="group">
+            <img src="./Images/elements-1@1x (1).png" alt="" class="element-1 bp1-animate-enter1" />
+            <div class="empowering-incubator">
+                Empowering incubators to launch the business of tomorrow.
+            </div>
+            <img src="./Images/photo-1-1@1x (1).png" alt="" class="photo-1-1 bp1-animate-enter">
+        </div>
+        <img src="./Images/photo-2-1@1x.png" alt="" class="photo-2-1" id="explore">
+        <div class="whether-youre-start">
+            Whether you're starting out, or scaling to meet demand, connect with the right people, products and best
+            practices to help your startup grow.
+        </div>
+        <img src="./Images/elements-5-2@2x.png" alt="" class="group-5-2">
+        <a href="https://docs.google.com/forms/d/1QCsfrtG7gbU7haBA8HL6Yar7AUz9fxCA_jK6tJpiWqs/edit"
+            target="_blank"><button class="button-2 border-3px-picton-blue">
+                Apply For Incubation
+            </button></a>
+        <img src="./Images/photo-3-2@1x.png" alt="" class="photo-3-2">
+        <img src="./Images/group-2@2x.svg" alt="" class="group-3">
+        <div class="rectangle-6">
+            <img src="./Images/group-1-2@2x.svg" alt="" class="group-1-1">
+            <div class="success-is-not-final">
+                <blockquote>
+                    "Success is not final; failure is not fatal: it is the courage to continue that counts."
+                </blockquote>
+            </div>
+            <div class="name">
+                Winston Churchill
+            </div>
+        </div>
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
